# schneider-cprogrm510A-extracredit

./: .gitignore  CMakeLists.txt  Color.h  DerivedShape.h  DerivedShapeBlue.cpp  DerivedShapeRed.cpp  Main.cpp  Point.cpp  Point.h  README.md  RuntimeLink.cpp  Shape.h  Tests.cpp  createlibs.sh  loadtime-run.sh  makefile
StaticLibVersion/: StaticTests.cpp  makefile  staticlib-run.sh
StaticLibVersion/staticdependencies/shape/: libShape.and
dependencies/blue/: libDerivedShape.dylib
dependencies/red/: libDerivedShape.dylib
